Added a new story.

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,27 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-pre
+h1
 {
-    
+    margin: 0;
+    padding: 0rem;
+    font-size: 3rem;
+}
+
+h2
+{
+    margin: 0;
+    font-size: 2rem;
+    padding: 0 4rem;
+}
+p
+{
+    font-size: 1.5rem;
+    line-height: 180%;
+    padding: 0 1rem;
+}
+
+#madlib-text
+{
+    padding: 1rem 0;
 }
